FAQ section completed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -387,8 +387,9 @@
           </div>
         </div>
       </section>
+      <!-- Product Section -->
       <hr style="border-top: dashed 1px; color: rgba(19, 19, 24, 0.2)" />
-      <section class="mt-6 lg:mt-8">
+      <section class="mt-6 lg:mt-8 mb-10 lg:mb-24">
         <div class="flex flex-col justify-center items-center">
           <h1 class="text-2xl lg:text-4xl mb-4 lg:mb-6 font-extrabold">
             Our New Products
@@ -409,7 +410,7 @@
             <div> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
               <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
-              <p class="mb-4 text-base font-medium text-[#13131899]">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <p class="mb-4 text-base font-medium text-[#13131899]">Showcase your passion with our 'World Cup Flags Football Jersey'—a winning blend of style, comfort, and national pride.</p>
               <div class="flex flex-col lg:flex-row gap-[16px]">
                 <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
                 <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
@@ -425,7 +426,7 @@
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
               <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
-              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Own the game with our top-tier football, available for purchase on our website. Elevate your play with quality.</p>
               <div class="flex flex-col lg:flex-row gap-[16px]">
                 <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
                 <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
@@ -441,7 +442,7 @@
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
               <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
-              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Style meets the pitch with our signature cap. Elevate your look and shield yourself in sporty sophistication.</p>
               <div class="flex flex-col lg:flex-row gap-[16px]">
                 <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
                 <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
@@ -457,7 +458,7 @@
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
               <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
-              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Showcase your passion with our 'World Cup Flags Football Jersey'—a winning blend of style, comfort, and national pride.</p>
               <div class="flex flex-col lg:flex-row gap-[16px]">
                 <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
                 <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
@@ -473,7 +474,7 @@
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
               <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
-              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Our cricket helmet combines safety and style. Elevate your protection and play with confidence.</p>
               <div class="flex flex-col lg:flex-row gap-[16px]">
                 <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
                 <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
@@ -489,7 +490,7 @@
             <div class=""> 
               <i class="fa-solid fa-star mr-2 text-[#F99808]"></i><span class="mr-4 text-base font-medium text-[#13131880]">5.0</span><i class="fa-regular fa-eye mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">20</span><i class="fa-regular fa-heart mr-2 text-[#13131880]"></i><span class="mr-4 text-base font-medium text-[#13131880]">200</span>
               <h2 class="font-extrabold text-lg text-[#131318] mb-3 mt-[13px]">World Cup Flags Football</h2>
-              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Dolor sit amet consectetur. Ut urna diam quis sagittis.</p>
+              <p class="mb-4 text-base font-medium text-[#13131899] w-auto">Own the game with our top-tier football, available for purchase on our website. Elevate your play with quality.</p>
               <div class="flex flex-col lg:flex-row gap-[16px]">
                 <span class="w-[124px] text-[#FF4240] text-[18px] font-extrabold">Price - $22.00</span>
                 <span class="text-[#13131899]"><i class="fa-solid fa-cart-shopping text-[#13131899]"></i><span class="ml-1">Delivery Fee : Free</span></span>
@@ -499,6 +500,76 @@
           </div>
         </div>
       </section>
+      <!-- Clients Question -->
+      <hr style="border-top: dashed 1px; color: rgba(19, 19, 24, 0.2)" />
+      <section class="mt-6 lg:mt-8">
+        <div class="flex flex-col justify-center items-center">
+          <h1 class="text-2xl lg:text-4xl mb-4 lg:mb-6 font-extrabold">
+            Clients Question
+          </h1>
+          <p class="mb-4 lg:mb-6 text-center">
+            Get answers to your queries in our Clients' Questions section. We're here to provide clarity and support your journey. 
+          </p>
+        </div>
+        <hr style="border-top: dashed 1px; color: rgba(19, 19, 24, 0.2)" />
+        <div class="mt-6 lg:mt-12 gap-10 border rounded-xl p-6 lg:p-8 flex flex-col lg:flex-row justify-center items-center">
+          <div><img class="w-[287px] lg:w-full h-[188px] lg:h-[470px]" src="Images/11.png" alt="" srcset=""></div>
+          <div class="bg-[#FFF]">
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Our Equipment
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-base w-[253px] lg:w-[518px]">Our equipment is designed for excellence, combining quality craftsmanship, innovation, and a commitment to elevating your sports experience.</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Hockey Training
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-base w-[253px] lg:w-[518px]">Our hockey training programs stand out with expert coaching, tailored workouts, and a focus on skill development, ensuring you elevate your game with every session</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Private Lessons
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-base w-[253px] lg:w-[518px]">Our hockey training programs stand out with expert coaching, tailored workouts, and a focus on skill development, ensuring you elevate your game with every session</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Ski Touring
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-base w-[253px] lg:w-[518px]">Our hockey training programs stand out with expert coaching, tailored workouts, and a focus on skill development, ensuring you elevate your game with every session</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Booking
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-base w-[253px] lg:w-[518px]">Our hockey training programs stand out with expert coaching, tailored workouts, and a focus on skill development, ensuring you elevate your game with every session</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus ">
+              <input type="radio" name="my-accordion-3" checked="checked" /> 
+              <div class="collapse-title text-xl font-bold">
+                Pricings
+              </div>
+              <div class="collapse-content"> 
+                <p class="text-base w-[253px] lg:w-[518px]">Our hockey training programs stand out with expert coaching, tailored workouts, and a focus on skill development, ensuring you elevate your game with every session</p>
+              </div>
+            </div>
+        </div>
     </main>
     <footer class="footer p-10 bg-base-200 text-base-content">
       <nav>
