product section description made text-center

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
           <h1 class="text-2xl lg:text-4xl mb-4 lg:mb-6 font-extrabold">
             Our New Products
           </h1>
-          <p class="mb-4 lg:mb-6">
+          <p class="mb-4 lg:mb-6 text-center">
             Explore innovation in 'Our New Products' collection. Discover
             cutting-edge solutions designed to elevate your lifestyle and
             experiences.
