successfully completed the design of the website

--- a/index.html
+++ b/index.html
@@ -1039,42 +1039,35 @@
 
       </div>
     </main>
-    <footer class="footer p-10 bg-base-200 text-base-content">
+    <footer class="footer p-10 bg-[#131318] text-base-content text-white items-center justify-center lg:gap-36 font-manrope flex flex-col-reverse lg:flex-row-reverse">
       <nav>
-        <header class="footer-title">Services</header>
-        <a class="link link-hover">Branding</a>
-        <a class="link link-hover">Design</a>
-        <a class="link link-hover">Marketing</a>
-        <a class="link link-hover">Advertisement</a>
+        <header class="text-lg font-bold">Services</header>
+        <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Branding</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Design</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Marketing</a>
+        <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Advertisement</a>
       </nav>
-      <nav>
-        <header class="footer-title">Company</header>
-        <a class="link link-hover">About us</a>
-        <a class="link link-hover">Contact</a>
-        <a class="link link-hover">Jobs</a>
-        <a class="link link-hover">Press kit</a>
-      </nav>
-      <nav>
-        <header class="footer-title">Legal</header>
-        <a class="link link-hover">Terms of use</a>
-        <a class="link link-hover">Privacy policy</a>
-        <a class="link link-hover">Cookie policy</a>
-      </nav>
-      <form>
-        <header class="footer-title">Newsletter</header>
-        <fieldset class="form-control w-80">
-          <label class="label">
-            <span class="label-text">Enter your email address</span>
-          </label>
-          <!-- <div class="join">
-            <input
-              type="text"
-              placeholder="username@site.com"
-              class="input input-bordered join-item"
-            />
-            <button class="btn btn-primary join-item">Subscribe</button>
-          </div> -->
-        </fieldset>
+      <div class="flex gap-10 lg:gap-36">
+        <nav class="block grid space-y-[6px]">
+          <header class="text-lg font-bold">Company</header>
+          <a class="link link-hover text-base font-medium text-[#FFFFFF99]">About us</a>
+          <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Contact</a>
+          <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Jobs</a>
+          <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Press kit</a>
+        </nav>
+        <nav class="block grid space-y-[6px]">
+          <header class="text-lg font-bold">Legal</header>
+          <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Terms of use</a>
+          <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Privacy policy</a>
+          <a class="link link-hover text-base font-medium text-[#FFFFFF99]">Cookie policy</a>
+        </nav>
+      </div>
+      <form class="flex flex-col items-center lg:items-start">
+        <header class=" text-2xl text-[#FFF] font-extrabold">Get In Touch</header>
+        <p class="text-center text-base font-medium text-[#FFFFFF99]">Let's stay in touch and elevate your experience!</p>
+        <span class=""><i class="fa-regular fa-envelope mr-2 text-[#FF4240]"></i><span class="text-base font-medium text-[#FFFFFF99]">hockeys@support.com</span></span>
+        <span><i class="fa-solid fa-phone mr-2 text-[#FF4240]"></i><span class="text-base font-medium text-[#FFFFFF99]">(+62) 123-321-543</span></span>
+
       </form>
     </footer>
   </body>
